clusters/talos-cluster/vox/httpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vox-route
  namespace: vox
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: gateway
  hostnames:
    - "vox.horus.maix.ovh"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: vox-service
          port: 11435
